--- a/faq.html
+++ b/faq.html
@@ -2,23 +2,24 @@
 <html lang="en">
 
 <head>
-        <title>Spino Develops</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet"
-                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <title>FAQ</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
         <div class="bc">
                 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
                         <div class="navbar-brand">
-                                <a class="navbar-item" href="https://bulma.io">
-                                        <img src="SpinoDevelopsLogo.png" width="30" height="30">
+                                <a class="navbar-item" href="#">
+                                        <img src="images/SpinoDevelopsLogo.png" width="30" height="30"
+                                                alt="Spino Develops Logo">
                                 </a>
 
                                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -36,16 +37,15 @@
                                         <a class="navbar-item" href="faq.html">FAQ</a>
                                         <a class="navbar-item" href="contact.html">Contact Me</a>
                                 </div>
-
                                 <div class="navbar-end">
-                                        <div class="navbar-item">
+                                        <!-- <div class="navbar-item">
                                                 <div class="buttons">
                                                         <a class="button is-primary">
                                                                 <strong>Help</strong></a>
-                                                        <a class="button is-info">Checkout</a>
-                                                </div>
-                                        </div>
+                                                        <a class="button is-info" href="#">Checkout</a>
+                                                </div> -->
                                 </div>
+                        </div>
                 </nav>
         </div>
         <div class="h0">Frequently Asked Questions</div>
@@ -64,8 +64,7 @@
         <div class="panel">
                 <p>Currently we have Classic Hosting Site, Discord Bot Page, Flexbox Inc, Gridline Corp, for more
                         information,
-                        images and previews <a href="templates.html">click here</a> (*All Prebuilt Sites are powered by
-                        Bulma)</p>
+                        images and previews <a href="templates.html">click here</a></p>
         </div>
         <button class="faq">What is a Normal Website?</button>
         <div class="panel">
@@ -92,34 +91,13 @@
                         to your website
                         (*terms and conditions apply)</p>
         </div>
-        <div class="footer">
-                <div class="table">
-                        <div class="tt">Links</div>
-                        <div class="li1"><a class="ec" href="home.html">Home</a></div>
-                        <div class="li1"><a class="ec" href="pricing.html">Pricing</a></div>
-                        <div class="li1"><a class="ec" href="templates.html">Website Templates</a></div>
-                        <div class="li1"><a class="ec" href="contact.html">Contact</a></div>
+        <footer class="footer">
+                <div class="content has-text-centered">
+                        <p>
+                                Copyright &copy; 2020-2021 Bilal A and <strong>Spino Develops</strong>
+                        </p>
                 </div>
-                <div class="table">
-                        <div class="tt">Social Media</div>
-                        <div class="li1"><a href="https://twitter.com/SpinoDevelops" class="fa fa-twitter"></a></div>
-                        <div class="li1"><a href="https://instagram.com/spinodevelops" class="fa fa-instagram"></a>
-                                <div class="li1"><a href="https://facebook.com/spinodevelops"
-                                                class="fa fa-facebook"></a></div>
-                                <div class="li1"><a href="https://github.com/bilalahmed1905" class="fa fa-github"></a>
-                                </div>
-                        </div>
-                        <div class="li"></div>
-                </div>
-                <div class="table">
-                        <div class="tt">Contact Info</div>
-                        <div class="li1"><a class="ec" href="mailto:bilalahmed1905@gmail.com">Email</a></div>
-                        <div class="li1"><a class="ec" href="">Discord (DM Spino#2494)</a></div>
-                        <div class="li1"><a class="ec" href="https://discord.gg/bmsvFDThMQ">Discord Server</a></div>
-                </div>
-
-        </div>
-        <div class="li1">Copyright &copy; 2020-2021 Bilal A and Spino Develops</div>
+        </footer>
         <script>
                 document.addEventListener('DOMContentLoaded', () => {
                         const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
