--- a/pricing.html
+++ b/pricing.html
@@ -10,15 +10,16 @@
         <link rel="stylesheet"
                 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
         <div class="bc">
                 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
                         <div class="navbar-brand">
-                                <a class="navbar-item" href="https://bulma.io">
-                                        <img src="SpinoDevelopsLogo.png" width="30" height="30">
+                                <a class="navbar-item" href="#">
+                                        <img src="images/SpinoDevelopsLogo.png" width="30" height="30"
+                                                alt="Spino Develops Logo">
                                 </a>
 
                                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -38,18 +39,20 @@
                                 </div>
 
                                 <div class="navbar-end">
-                                        <div class="navbar-item">
+                                        <!-- <div class="navbar-item">
                                                 <div class="buttons">
                                                         <a class="button is-primary">
                                                                 <strong>Help</strong></a>
                                                         <a class="button is-info">Checkout</a>
                                                 </div>
-                                        </div>
+                                        </div> -->
                                 </div>
                 </nav>
         </div>
-        <div class="h0" style="margin-bottom: 50px;text-decoration: underline;">
+        <div class="h0" style="text-decoration: underline;">
                 Website Pricing</div>
+        <div class="subtitle has-text-centered">For more information on website templates <a href="templates.html">click
+                        here</a></div>
         <div class="cardContainer">
                 <div class="card">
                         <div class="header">Starter Website</div>
@@ -79,34 +82,13 @@
                         <div class="li"><a href="#" class="button is-success">Order Now</a></div>
                 </div>
         </div>
-        <div class="footer">
-                <div class="table">
-                        <div class="tt">Links</div>
-                        <div class="li1"><a class="ec" href="home.html">Home</a></div>
-                        <div class="li1"><a class="ec" href="pricing.html">Pricing</a></div>
-                        <div class="li1"><a class="ec" href="templates.html">Website Templates</a></div>
-                        <div class="li1"><a class="ec" href="contact.html">Contact</a></div>
+        <footer class="footer">
+                <div class="content has-text-centered">
+                        <p>
+                                Copyright &copy; 2020-2021 Bilal A and <strong>Spino Develops</strong>
+                        </p>
                 </div>
-                <div class="table">
-                        <div class="tt">Social Media</div>
-                        <div class="li1"><a href="https://twitter.com/SpinoDevelops" class="fa fa-twitter"></a></div>
-                        <div class="li1"><a href="https://instagram.com/spinodevelops" class="fa fa-instagram"></a>
-                                <div class="li1"><a href="https://facebook.com/spinodevelops"
-                                                class="fa fa-facebook"></a></div>
-                                <div class="li1"><a href="https://github.com/bilalahmed1905" class="fa fa-github"></a>
-                                </div>
-                        </div>
-                        <div class="li"></div>
-                </div>
-                <div class="table">
-                        <div class="tt">Contact Info</div>
-                        <div class="li1"><a class="ec" href="mailto:bilalahmed1905@gmail.com">Email</a></div>
-                        <div class="li1"><a class="ec" href="">Discord (DM Spino#2494)</a></div>
-                        <div class="li1"><a class="ec" href="https://discord.gg/bmsvFDThMQ">Discord Server</a></div>
-                </div>
-
-        </div>
-        <div class="li1">Copyright &copy; 2020-2021 Bilal A and Spino Develops</div>
+        </footer>
         <script>
                 document.addEventListener('DOMContentLoaded', () => {
                         const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
