--- a/templates.html
+++ b/templates.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-        <title>Spino Develops</title>
+        <title>Website Templates</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +10,16 @@
         <link rel="stylesheet"
                 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
         <div class="bc">
                 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
                         <div class="navbar-brand">
-                                <a class="navbar-item" href="https://bulma.io">
-                                        <img src="SpinoDevelopsLogo.png" width="30" height="30">
+                                <a class="navbar-item" href="#">
+                                        <img src="images/SpinoDevelopsLogo.png" width="30" height="30"
+                                                alt="Spino Develops Logo">
                                 </a>
 
                                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -37,16 +39,34 @@
                                 </div>
 
                                 <div class="navbar-end">
-                                        <div class="navbar-item">
+                                        <!-- <div class="navbar-item">
                                                 <div class="buttons">
                                                         <a class="button is-primary">
                                                                 <strong>Help</strong></a>
                                                         <a class="button is-info">Checkout</a>
                                                 </div>
-                                        </div>
+                                        </div> -->
                                 </div>
                 </nav>
         </div>
+        <section class="hero is-large is-success has-text-centered-mobile">
+                <div class="hero-body">
+                        <p class="title">
+                                Website Templates
+                        </p><br>
+                        <p class="subtitle">
+                                All templates have TrueResponsive which means it supports all supported browsers and
+                                devices
+                        </p>
+                </div>
+        </section>
+        <footer class="footer">
+                <div class="content has-text-centered">
+                        <p>
+                                Copyright &copy; 2020-2021 Bilal A and <strong>Spino Develops</strong>
+                        </p>
+                </div>
+        </footer>
         <script>
                 document.addEventListener('DOMContentLoaded', () => {
                         const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
