Removed Nav Buttons Entirely

--- a/faq.html
+++ b/faq.html
@@ -38,12 +38,7 @@
                                         <a class="navbar-item" href="contact.html">Contact Me</a>
                                 </div>
                                 <div class="navbar-end">
-                                        <!-- <div class="navbar-item">
-                                                <div class="buttons">
-                                                        <a class="button is-primary">
-                                                                <strong>Help</strong></a>
-                                                        <a class="button is-info" href="#">Checkout</a>
-                                                </div> -->
+
                                 </div>
                         </div>
                 </nav>
@@ -83,11 +78,11 @@
         </div>
         <button class="faq">Are you doing Backend Development?</button>
         <div class="panel">
-                <p>At the moment no we are not</p>
+                <p>At the moment no I am not</p>
         </div>
         <button class="faq">Do you provide refunds?</button>
         <div class="panel">
-                <p>At this time we do not provide refunds, however if the client is unsatisfied we can provide changes
+                <p>At this time I do not provide refunds, however if the client is unsatisfied we can provide changes
                         to your website
                         (*terms and conditions apply)</p>
         </div>
