--- a/templates.html
+++ b/templates.html
@@ -39,13 +39,9 @@
                                 </div>
 
                                 <div class="navbar-end">
-                                        <!-- <div class="navbar-item">
-                                                <div class="buttons">
-                                                        <a class="button is-primary">
-                                                                <strong>Help</strong></a>
-                                                        <a class="button is-info">Checkout</a>
-                                                </div>
-                                        </div> -->
+                                        <div class="navbar-item">
+
+                                        </div>
                                 </div>
                 </nav>
         </div>
