More Big Changes
Many Big Changes Including:
- Type Speed Tester Page
- Form now using W3.CSS
- Images folder is now called media
- Buttons added back to the navbar
- Form Validation is under development

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="home.html">
-                    <img src="images/SpinoDevelopsLogo.png" width="30" height="30" alt="Spino Develops Logo">
+                    <img src="media/SpinoDevelopsLogo.png" width="30" height="30" alt="Spino Develops Logo">
                 </a>
 
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -35,9 +35,33 @@
                     <a class="navbar-item" href="pricing.html">Pricing</a>
                     <a class="navbar-item" href="faq.html">FAQ</a>
                     <a class="navbar-item" href="contact.html">Contact Me</a>
+                    <div class="navbar-item has-dropdown is-hoverable is-left">
+                        <a class="navbar-link">
+                            Social
+                        </a>
+                        <div class="navbar-dropdown is-boxed">
+                            <a class="navbar-item" href="https://twitter.com/spinodevelops">
+                                Twitter
+                            </a>
+                            <a class="navbar-item" href="https://discord.gg/bmsvFDThMQ">
+                                Discord
+                            </a>
+                            <a class="navbar-item" href="https:github.com/bilalahmed1905">
+                                Github
+                            </a>
+                            <a class="navbar-item" href="https://instagram.com/spinodevelops">
+                                Instagram
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="navbar-end">
-
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a class="button is-primary">Help</a>
+                            <a class="button is-info">Checkout</a>
+                        </div>
+                    </div>
                 </div>
         </nav>
         <h1 class="h0"
@@ -59,7 +83,7 @@
         </div>
 
         <p class="p">CSS</p>
-        <div class=" container">
+        <div class="container">
             <div class="skills css">80%</div>
         </div>
 
@@ -84,29 +108,19 @@
         </div>
     </div>
 
-    <h2 class="w3-center" style="text-decoration: underline;">Projects</h2>
+    <h2 class="title is-3 has-text-centered" style="text-decoration: underline;">Projects</h2>
 
     <div class="w3-content w3-display-container" role="presentation">
-        <img class="mySlides" src="images/typespeedtester.png" style="width:100%">
-        <img class="mySlides" src="images/htmlclock.png" style="width:100%">
-        <img class="mySlides" src="images/x.png" style="width:100%">
-
+        <a href="typespeedtest.html"><img class="mySlides" src="media/typespeedtester.png" style="width: 100%;"></a>
+        <a href="templates.html"><img class="mySlides" src="media/x.png" style="width:100%"></a>
         <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
     </div>
     <footer class="footer" role="footer" style="margin-top:10px;">
         <div class="content has-text-centered">
-            <div class="is-size-5-desktop is-size-4-tablet is-size-3-mobile ">Social Media</div>
-            <div class="is-flex is-flex-direction-column" style="width: 100%">
-                <div class="li1"><a href="https://twitter.com/SpinoDevelops" class="fa fa-twitter"></a></div>
-                <div class="li1"><a href="https://instagram.com/spinodevelops" class="fa fa-instagram"></a></div>
-                <div class="li1"><a href="https://facebook.com/spinodevelops" class="fa fa-facebook"></a></div>
-                <div class="li1"><a href="https://github.com/bilalahmed1905" class="fa fa-github"></a></div>
-            </div>
             <p style="margin-top: 10px;">
                 Copyright &copy; 2020-2021 Bilal A and <strong>Spino Develops</strong>
             </p>
-        </div>
         </div>
     </footer>
     <script>
