--- a/templates.html
+++ b/templates.html
@@ -18,7 +18,7 @@
                 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
                         <div class="navbar-brand">
                                 <a class="navbar-item" href="#">
-                                        <img src="images/SpinoDevelopsLogo.png" width="30" height="30"
+                                        <img src="media/SpinoDevelopsLogo.png" width="30" height="30"
                                                 alt="Spino Develops Logo">
                                 </a>
 
@@ -40,9 +40,13 @@
 
                                 <div class="navbar-end">
                                         <div class="navbar-item">
-
+                                                <div class="buttons">
+                                                        <a class="button is-primary">Help</a>
+                                                        <a class="button is-info">Checkout</a>
+                                                </div>
                                         </div>
                                 </div>
+                        </div>
                 </nav>
         </div>
         <section class="hero is-large is-success has-text-centered-mobile">
